Fix: Update color of form links in courses.html to pass contrast checks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ li a {
 }
 
 .available {
-    color: forestgreen;
+    color: #076600;
     text-decoration: underline;
     font-weight: bold;
 }
